--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,4 @@ Options All -Indexes
 
 RewriteEngine On
 
-RewriteRule ^([-a-zA-Z0-9]+)$ index.php?rules=$1
+RewriteRule ^([-a-zA-Z0-9]+)$ index.php?route=$1
